--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ http://www.templatemo.com/tm-467-easy-profile
 			</div>
 		</div>
 
-        <div class="col-md-6 col-sm-12">
+        <!-- <div class="col-md-6 col-sm-12">
 			<div class="skills">
 				<h2 class="white">CARRER OBJECTIVES</h2>
                 <p>To use my knowledge and skills with commitment and efficiency for the betterment of the organization and the society at large, 
@@ -61,7 +61,7 @@ http://www.templatemo.com/tm-467-easy-profile
 
 				</div>
 			</div>
-		</div>
+		</div> -->
         
 		
 	</div>
