--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@ http://www.templatemo.com/tm-467-easy-profile
 			<div class="experience">
 				<h2 class="white">Experiences</h2>
 					<div class="experience-content">
-						<h4 class="experience-title accent">Website Development</h4>
-						<h5>New Media Company</h5><span></span>
+						<h4 class="experience-title accent">Remote Sensing Intern</h4>
+						<h5>Regional Center for Mapping of Resources for Development</h5><span></span>
 						<h5>2022 January - 2022 April</h5>
 						<!-- <p class="education-description">Cras porta tincidunt sem, in sollicitudin lorem efficitur ut. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p> -->
 					</div>
